--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.17.RELEASE'
@@ -30,5 +27,16 @@ dependencies {
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.12.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.3.0.Final'
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.17.RELEASE'
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.10.Final'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+    compile group: 'org.springframework', name: 'spring-aspects', version: '4.3.25.RELEASE'
+
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.5'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
+    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.17.RELEASE'
+    //RestFul
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
 }
 
